--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,12 @@
 version: '3.8'
 services:
+  backend:
+    image: keeponherdin-backend
+    restart: always
+    environment:
+      - DATABASE_HOSTNAME=db
+    ports:
+      - "8000:8000"
   db:
     image: postgres:14.1-alpine
     restart: always
