--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.8.3",
     "@mui/material": "^5.8.2",
+    "axios": "^0.27.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
@@ -21,6 +22,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "jsdom": "^19.0.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.9",
     "vitest": "^0.14.2"
