--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,10 @@
 version: '3.8'
 services:
+  frontend:
+    image: keeponherdin-frontend
+    restart: always
+    ports:
+      - "8080:8080"
   backend:
     image: keeponherdin-backend
     restart: always
