Add insert-and-retrieve single match db test

--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,7 @@ task deployFrontend {
     }
 }
 
-task deployAll(type:Exec) {
+task deployAll {
     dependsOn tasks.deployBackend
     dependsOn tasks.deployFrontend
 }
