--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,16 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@hookform/resolvers": "^2.9.3",
     "@mui/icons-material": "^5.8.3",
     "@mui/material": "^5.8.2",
     "axios": "^0.27.2",
+    "node-fetch": "^3.2.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.3.0"
+    "react-hook-form": "^7.33.1",
+    "react-router-dom": "^6.3.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@testing-library/react": "^13.3.0",
