--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.8.3",
     "@mui/material": "^5.8.2",
     "axios": "^0.27.2",
+    "fast-deep-equal": "^3.1.3",
     "node-fetch": "^3.2.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
