--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ task buildAllContainers {
 }
 
 task deployBackend {
-    dependsOn tasks.buildBackendContainer
+    dependsOn tasks.buildAllContainers
     doLast {
         exec {
             commandLine 'docker', 'tag', 'keeponherdin-backend:latest', DOCKER_REPO_URL + 'keeponherdin-backend:latest'
@@ -49,7 +49,7 @@ task deployBackend {
 }
 
 task deployFrontend {
-    dependsOn tasks.buildFrontendContainer
+    dependsOn tasks.buildAllContainers
     doLast{
         exec {
             commandLine 'docker', 'tag', 'keeponherdin-frontend:latest', DOCKER_REPO_URL + 'keeponherdin-frontend:latest'
