--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,8 +6,9 @@ COPY . ./
 RUN yarn install && yarn build
 
 # production environment
-FROM nginx:alpine
+FROM amd64/nginx:alpine
 WORKDIR /usr/share/nginx/html
 RUN rm -rf ./*
 COPY --from=builder /app/dist .
+EXPOSE 80
 ENTRYPOINT ["nginx", "-g", "daemon off;"]
