--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "@mui/material": "^5.8.2",
     "axios": "^0.27.2",
     "fast-deep-equal": "^3.1.3",
+    "google-auth-library": "^8.4.0",
+    "msw": "^0.45.0",
     "node-fetch": "^3.2.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
