--- a/kubernetes/frontendDeployment.yaml
+++ b/kubernetes/frontendDeployment.yaml
@@ -1,20 +1,29 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: koh-frontend
+  name: keeponherdin-frontend
+  labels:
+    app: keeponherdin-frontend
 spec:
   replicas: 1
   template:
     metadata:
       labels:
         app: keeponherdin
+        role: primary
+        tier: frontend 
     spec:
       containers:
         - name: keeponherdin-frontend
           image: us-central1-docker.pkg.dev/keeponherdin/keeponherdin-docker-repo/keeponherdin-frontend:latest
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           ports:
             - containerPort: 8080
   selector:
     matchLabels:
-      app: keeponherdin
+      app: keeponherdin-frontend
+  strategy:
+    rollingUpdate:
+      maxSurge: 25%
+      maxUnavailable: 25%
+    type: RollingUpdate
