--- a/kubernetes/frontendService.yaml
+++ b/kubernetes/frontendService.yaml
@@ -1,13 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend-service
+  name: keeponherdin-frontend
+  labels:
+    app: keeponherdin-frontend
 spec:
   type: LoadBalancer
   ports:
-    - name: frontend-service
-      port: 80
+    - port: 80
       protocol: TCP
       targetPort: 80
   selector:
-    app: keeponherdin
+      app: keeponherdin-frontend
