--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,2 @@
-VITE_BACKEND_HOSTNAME=34.71.56.191
-VITE_FRONTEND_HOSTNAME=34.132.222.219
+VITE_FRONTEND_HOSTNAME=keeponherdin-frontend.default.
+VITE_BACKEND_HOSTNAME=keeponherdin-backend
