--- a/kubernetes/frontendDeployment.yaml
+++ b/kubernetes/frontendDeployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: keeponherdin-frontend
   labels:
-    app: keeponherdin-frontend
+    app: keeponherdin
 spec:
   replicas: 1
   template:
@@ -11,7 +11,7 @@ spec:
       labels:
         app: keeponherdin
         role: primary
-        tier: frontend 
+        tier: frontend
     spec:
       containers:
         - name: keeponherdin-frontend
@@ -21,7 +21,7 @@ spec:
             - containerPort: 8080
   selector:
     matchLabels:
-      app: keeponherdin-frontend
+      app: keeponherdin
   strategy:
     rollingUpdate:
       maxSurge: 25%
